Number.parseInt is not === global parseInt in nightly r182673 https://bugs.webkit.org/show_bug.cgi?id=143799

Patch by Jordan Harband <ljharb@gmail.com> on 2015-04-16
Reviewed by Darin Adler.

Source/JavaScriptCore:

Ensuring parseInt === Number.parseInt, per spec
https://people.mozilla.org/~jorendorff/es6-draft.html#sec-number.parseint

* runtime/CommonIdentifiers.h:
* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::init):
* runtime/JSGlobalObject.h:
(JSC::JSGlobalObject::parseIntFunction):
* runtime/NumberConstructor.cpp:
(JSC::NumberConstructor::finishCreation):

LayoutTests:

* js/number-constructor-expected.txt:
* js/parseInt-expected.txt:
* js/script-tests/number-constructor.js:
* js/script-tests/parseInt.js:

Canonical link: https://commits.webkit.org/161876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182938 268f45cc-cd09-0410-ab3c-d52691b4dbfc