LayoutTests/js/script-tests/number-constructor.js
@@ -130,6 +130,8 @@ shouldBe('Number.parseFloat("200000000000000000000000000000000000000000000000000
 shouldThrow('Number.parseFloat(foo)');
 
 // parseInt
+shouldBe('Number.parseInt', 'parseInt');
+shouldBe('var numberParseInt = Number.parseInt; parseInt = function () {}; numberParseInt', 'Number.parseInt');
 shouldBe('Number.parseInt.length', '2');
 shouldBe('Number.parseInt("0")', '0');
 shouldBe('Number.parseInt("-0")', '-0');
